--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -15,7 +15,7 @@
                                     <ul class="gn-menu">
 
                                         <li>
-                                            <a href="#admin" class="gn-icon gn-icon-cog">Facturación</a>
+                                            <a href="#admin" class="gn-icon gn-icon-download">Facturación</a>
 
                                         <ol class="gn-submenu">
                                             <!--la etiqueta  /cargar-excel corresponde a
@@ -31,7 +31,7 @@
                                     </li>
 
                                     <li>
-                                        <a href="#about" class="gn-icon gn-icon-cog">Tesoreria</a>
+                                        <a href="#about" class="gn-icon gn-icon-download">Tesoreria</a>
 
                                         <ol class="gn-submenu">
 
@@ -40,15 +40,15 @@
                                         </ol>
 
                                     </li>
-                                    <li><a href="#service" class="gn-icon gn-icon-cog">Operaciones</a>                                        
+                                    <li><a href="#service" class="gn-icon gn-icon-download">Operaciones</a>                                        
                                          <ol class="gn-submenu">
                                              <li><a href="/import-fac">Depósitos</a></li>
                                         </ol>
                                     </li>
 
-                                    <li><a href="#works" class="gn-icon gn-icon-cog">Desarrollos</a></li>
+                                    <li><a href="#works" class="gn-icon gn-icon-download">Desarrollos</a></li>
                                     <li>
-                                        <a href="#contact" class="gn-icon gn-icon-cog">Contacto</a>
+                                        <a href="#contact" class="gn-icon gn-icon-download">Contacto</a>
                                     </li>
 
                                     </ul>
