--- a/mginvoice/templates/fac/archexcel.html
+++ b/mginvoice/templates/fac/archexcel.html
@@ -12,6 +12,7 @@
 
     <h2 style="color: #fff; text-align: center">Archivos Para Importar Facturas</h2>
 
+    <h style="color: #fff; text-align: center">['NOMBRE RECEPTOR', 'RFC', 'Folio', 'NOMBRE DE EMISOR', 'RFC EMISOR', 'TIPO DE DOCUMENTO', 'FECHA DE EMISION', 'MONEDA', 'ESTADO', ' SUBTOTAL ', ' TOTAL ', ' IVA ', 'AFILIADO']</h>
 
     <script type="text/javascript">
             function cargar(){
