--- a/mginvoice/templates/comm/header.html
+++ b/mginvoice/templates/comm/header.html
@@ -16,14 +16,17 @@
 
     <!-- Fonts -->
     <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-	<link href="{% static 'css/nivo-lightbox.css' %}" rel="stylesheet" />
-	<link href="{% static 'css/nivo-lightbox-theme/default/default.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/nivo-lightbox.css' %}" rel="stylesheet" />
 	<link href="{% static 'css/animate.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="  {% static 'css/estilos.css' %}">
+  
     <!-- Squad theme CSS -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<link href="{% static 'color/default.css' %}" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="  {% static 'css/estilos.css' %}">
+    <!-- Load from unpkg -->
+
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>    
 
 </head>
 {% endblock %}
