--- a/mginvoice/static/css/style_resp.css
+++ b/mginvoice/static/css/style_resp.css
@@ -127,7 +127,7 @@ hr {
 
 /*    ******
 .bgfooter-green {
-	background-color: #ea8002; 
+	background-color: #1BA620; 
 }
 *****  */
 
@@ -160,7 +160,7 @@ hr {
 		margin: 0;
 		padding: 0;
 		background: #fff;
-		color: #ea8002;
+		color: #1BA620;
 		list-style: none;
 		text-transform: none;
 		font-weight: 300;
@@ -181,7 +181,7 @@ hr {
 .gn-menu-main a {
 		display: block;
 		height: 100%;
-		color: #ea8002;
+		color: #1BA620;
 		text-decoration: none;
 		cursor: pointer;
 }
@@ -189,7 +189,7 @@ hr {
 .no-touch .gn-menu-main a:hover,
 .no-touch .gn-menu li.gn-search-item:hover,
 .no-touch .gn-menu li.gn-search-item:hover a {
-		background: #ea8002 ;
+		background: #1BA620 ;
 		color: white  ;
 }
 
@@ -319,7 +319,7 @@ input.gn-search {
 		outline: none;
 		border: none;
 		background: transparent ;
-		color: #ea8002;
+		color: #1BA620;
 		font-weight: 300;
 		font-family: 'Lato', Arial, helvetica;
 		cursor: pointer;
@@ -328,19 +328,19 @@ input.gn-search {
 /* placeholder */
 
 .gn-search::-webkit-input-placeholder {
-		color: #ea8002
+		color: #1BA620
 }
 
 .gn-search:-moz-placeholder {
-		color: #ea8002
+		color: #1BA620
 }
 
 .gn-search::-moz-placeholder {
-		color: #ea8002
+		color: #1BA620
 }
 
 .gn-search:-ms-input-placeholder {
-		color: #ea8002
+		color: #1BA620
 }
 
 /* hide placeholder when active in Chrome */
@@ -455,20 +455,20 @@ input.gn-search:focus {
 		vertical-align: -2px;
 		width: 30px;
 		height: 3px;
-		background: #ea8002;
-		box-shadow: 0 3px white, 0 -6px #ea8002, 0 -9px white, 0 -12px #ea8002;
+		background: #1BA620;
+		box-shadow: 0 3px white, 0 -6px #1BA620, 0 -9px white, 0 -12px #1BA620;
 		content: '';
 }
 
 .no-touch .gn-icon-menu:hover::before,
 .no-touch .gn-icon-menu.gn-selected:hover::before {
 		background: white;
-		box-shadow: 0 3px #ea8002, 0 -6px white, 0 -9px #ea8002, 0 -12px white;
+		box-shadow: 0 3px #1BA620, 0 -6px white, 0 -9px #1BA620, 0 -12px white;
 }
 
 .gn-icon-menu.gn-selected::before {
-		background: #ea8002;
-		box-shadow: 0 3px white, 0 -6px #ea8002, 0 -9px white, 0 -12px #ea8002;
+		background: #1BA620;
+		box-shadow: 0 3px white, 0 -6px #1BA620, 0 -9px white, 0 -12px #1BA620;
 }
 
 /* styles for opening menu */
@@ -1073,7 +1073,7 @@ table.scroll {
 }
 
 table.scroll tbody,
-table.scroll thead { display: block;}
+table.scroll thead { display: block; }
 
 
 thead th { 
@@ -1089,20 +1089,16 @@ table.scroll tbody {
    overflow:scroll;
 }
 
+tbody { border-top: 2px solid black; }
 
-tbody { border-top: 2px solid black;}
-
-/*
 tbody td {
-    width: 20%;
+    width: 20%; /* Optional */
     border-right: 1px solid black;    
 }
 
-*/
-
 th {
     /*  width: 10%;Optional */
-    border-right: 1px solid black; 
+    border-right: 1px solid black;
 }
 
 
@@ -1114,17 +1110,18 @@ tbody td:last-child, thead th:last-child {
 ***/
 
 tr:nth-child(even) {
-      background-color: #eee; 
+      background-color: #eee;
 }
 tr:nth-child(odd) {
      background-color:#fff;
 }
 
+
 td {
-       border:1px solid blue; /*** aquiiii **/
+       border:1px solid blue;
        padding:auto;       
-       text-align:left;
-       color:#194bef     
+        text-align:right;
+        color: black;     
 } 
 
   caption {
@@ -1143,7 +1140,7 @@ td {
 
 
 th {
-    background-color: #ea8002; /* ea8002*/
+    background-color: #c6ccc6; /* 1BA620*/
     color: white;
      /*padding:10px;    */
      /*width:100%;*/    
