--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -22,9 +22,9 @@
                                               url(r'^cargar-excel/$', 'apps.pvrep.views.upload_file', name = 'cargar_excel'),
                                                del url definido en pvrep/urls.py
                                             -->
-                                            <li><a href="/import-fac">Cargar Facturas</a></li>
+                                            <li><a href="/import-fac">Invoice Load</a></li>
 
-                                            <li><a href="/import-fac">Cargar Pagos</a></li>
+                                            <li><a href="/list_fac">Invoice List</a></li>
 
                                         </ol>
 
