--- a/mginvoice/templates/comm/header.html
+++ b/mginvoice/templates/comm/header.html
@@ -1,13 +1,13 @@
+{% load django_htmx %}
 {% load static %}
-
 {% block encabezado %}
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
    <title >MGINVOICE: INVOICE MANGEMENT</title
 
@@ -17,16 +17,30 @@
     <!-- Fonts -->
     <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/nivo-lightbox.css' %}" rel="stylesheet" />
-	<link href="{% static 'css/animate.css' %}" rel="stylesheet" />
+	  <link href="{% static 'css/animate.css' %}" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="  {% static 'css/estilos.css' %}">
   
     <!-- Squad theme CSS -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- Load from unpkg -->
-
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>    
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script> 
 
+    <!-- script src="https://unpkg.com/htmx.org@1.7.0"></script -->
+    <meta name="htmx-config" content='{"historyCacheSize": 15}'>
+
+    <script src="{% static 'js/htmx.js' %}" defer></script>
+    <script src="{% static 'js/ext/debug.js' %}" defer></script>
+    <script src="{% static 'js/ext/event-header.js' %}" defer></script>
+  
+    <script src="{% static 'js/htmx.min.js' %}" defer> </script>
+
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+          event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        })
+    </script>
+      
 </head>
 {% endblock %}
