--- a/mginvoice/templates/fac/list_fac.html
+++ b/mginvoice/templates/fac/list_fac.html
@@ -14,7 +14,21 @@
 
 <h2 style="color: #fff; text-align: center">Invoice List<h2>
 
-{% include "fac/table_fac.html" %}
+    {% if user.is_authenticated %}
+
+    <form action="{% url 'find_fac' %}" method="get">
+        <div class="form-group">
+        <div class="col-xs-4">
+            <input type="text" class="form-control" name="query" placeholder="Invoice FOLIO" />
+        </div>
+            <button type="submit" class="btn btn-primary">Find</button>
+        </div>
+
+        {% include "fac/table_fac.html" %}
+
+    </form>
+
+    {% endif %}
 
 {% endblock %}
 
