--- a/mginvoice/templates/fac/table_fac.html
+++ b/mginvoice/templates/fac/table_fac.html
@@ -70,5 +70,26 @@
         </table>
     </div>
 
+    {% if fac_list.has_other_pages %}
+  <ul class="pagination">
+    {% if fac_list.has_previous %}
+      <li><a href="?page={{ fac_list.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in fac_list.paginator.page_range %}
+      {% if fac_list.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if fac_list.has_next %}
+      <li><a href="?page={{ users.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+{% endif %}
    
 
