--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -26,6 +26,8 @@
 
                                             <li><a href="/list_fac">Invoice List</a></li>
 
+                                            <li><a href="/create_fac">Invoice Create</a></li>
+
                                         </ol>
 
                                     </li>
