--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -22,27 +22,28 @@
                                               url(r'^cargar-excel/$', 'apps.pvrep.views.upload_file', name = 'cargar_excel'),
                                                del url definido en pvrep/urls.py
                                             -->
-                                            <li><a href="/import-fac">Invoice Load</a></li>
+                                            <li><a href="/import-fac">Carga Facturas</a></li>
 
-                                            <li><a href="/list_fac">Invoice List</a></li>
+                                            <li><a href="/list_fac">Lista De Facturas</a></li>
 
-                                            <li><a href="/create_fac">Invoice Create</a></li>
+                                            <li><a href="/create_fac">Registra Facturas</a></li>
 
                                         </ol>
 
                                     </li>
 
                                     <li>
-                                        <a href="#about" class="gn-icon gn-icon-download">Tesoreria</a>
+                                        <a href="#about" class="gn-icon gn-icon-download">Operaciones</a>
 
-                                        <ol class="gn-submenu">
+                                        <ol class="gn-submenu"> 
 
-                                            <li><a href="/import-fac">Teso1</a></li>
+                                            <li><a href="/create_depo">Registra Depósitos</a></li>
+                                            <li><a href="/list_depo">Lista De Depósitos</a></li>
 
                                         </ol>
 
                                     </li>
-                                    <li><a href="#service" class="gn-icon gn-icon-download">Operaciones</a>                                        
+                                    <li><a href="#service" class="gn-icon gn-icon-download">Tesoreria</a>                                        
                                          <ol class="gn-submenu">
                                              <li><a href="/import-fac">Depósitos</a></li>
                                         </ol>
