--- a/mginvoice/templates/fac/list_fac.html
+++ b/mginvoice/templates/fac/list_fac.html
@@ -12,7 +12,7 @@
 
 {% block bodyini %}
 
-<h2 style="color: #fff; text-align: center">Invoice List<h2>
+<h2 style="color: #fff; text-align: center">Lista De Facturas<h2>
 
     {% if user.is_authenticated %}
     <section>
