--- a/mginvoice/templates/fac/table_fac.html
+++ b/mginvoice/templates/fac/table_fac.html
@@ -36,11 +36,11 @@
             <td>{{ fac.ID_EMISOR }}</td>
             <td>{{ fac.FOLIO }}</td>
             <td>{{ fac.SERIE }}</td>
-            <td>{{ fac.TIPO_DOCUMENTO }}</td>
+            <td>{{ fac.ID_TIPO_DOC }}</td>
             <td>{{ fac.ID_RECEPTOR }}</td>
             <td>{{ fac.FECHA_EMISION }}</td>
-            <td>{{ fac.MONEDA }}</td>
-            <td>{{ fac.ESTADO_FACTURA }}</td>
+            <td>{{ fac.ID_MONEDA }}</td>
+            <td>{{ fac.ID_ESTADO_FAC }}</td>
             <td>{{ fac.SUBTOTAL }}</td>
             <td>{{ fac.TOTAL }}</td>
             <td>{{ fac.IVA }}</td>
