--- a/mginvoice/templates/comm/header.html
+++ b/mginvoice/templates/comm/header.html
@@ -41,6 +41,13 @@
           event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
         })
     </script>
+
+
+        <!-- Scripts: Bootstraps, HTMX, and custom JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://unpkg.com/htmx.org@1.6.1/dist/htmx.min.js"></script>
+        <script src="{% static 'js/dialog.js' %}"></script>
+        <script src="{% static 'js/toast.js' %}"></script>
       
 </head>
 {% endblock %}
