--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -45,7 +45,7 @@
                                     </li>
                                     <li><a href="#service" class="gn-icon gn-icon-download">Tesoreria</a>                                        
                                          <ol class="gn-submenu">
-                                             <li><a href="/import-fac">Depósitos</a></li>
+                                             <li><a href="/list_depo_up">Lista De Depósitos</a></li>
                                         </ol>
                                     </li>
 
