--- a/mginvoice/templates/oper/table_depo.html
+++ b/mginvoice/templates/oper/table_depo.html
@@ -19,6 +19,7 @@
                   <th>TIPO_CAMBIO</th>
                   <th>IMPORTE</th>
                   <th>EDO. DEPOSITO</th>
+                  <th>EN FIRME?</th>
                   <th>RECEPTOR</th>
                   <th>AFILIADO</th>
                   <th>USUARIO</th>
@@ -39,6 +40,7 @@
             <td>{{ depo.TIPO_CAMBIO }}</td>
             <td>{{ depo.IMPORTE }}</td>
             <td>{{ depo.ID_ESTADO_DEP }}</td>
+            <td>{{ depo.EN_FIRME }}</td>
             <td>{{ depo.ID_RECEPTOR }}</td>
             <td>{{ depo.ID_AFILIADO }}</td>
             <td>{{ depo.usuario }}</td>
