--- a/mginvoice/templates/fac/create_fac.html
+++ b/mginvoice/templates/fac/create_fac.html
@@ -1,80 +1,64 @@
-{% extends "comm/base.html" %}
-{% load static %}
 {% load widget_tweaks %}
 
-{% block titulo %}Registra Factura{% endblock %}
+<div id="modal"  _="on closeModal add .closing then wait for animationend then remove me">
 
-<body>
+	<div class="modal-content">
 
-    {% block bodyini %}
+        <a href="#modal.closing"  _="on click trigger closeModal" title="Close" class="close">X</a>
+
+         <h1>Registra Facturas</h1>
     
-    <section>
-    
-        <h2 style="color: #fff; text-align: center">Registra Factura<h2>
-            
-        <article class="col-md-3">
-        </article>
-    
-        <article class="col-md-6">
-            <ul class="nav nav-tabs nav-justified well">
-    
-                {% if user.is_authenticated %}
-    
-                <form action="{% url 'create_fac' %}" method="post" enctype="multipart/form-data">
+                <form hx-post="{{ request.path }}" class="dialog">
+                    {% csrf_token %}
 
-                       {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                  {% endfor %}
 
-                       {% for hidden in form.hidden_fields %}
-                       {{ hidden }}
-                     {% endfor %}
+              
+                  {% for field in form.visible_fields %}
 
-                 
-                     {% for field in form.visible_fields %}
-
-                        <i for="{{ field.id_for_label }}">{{ field.label }}</i>
+                     <i for="{{ field.id_for_label }}">{{ field.label }}</i>
 
 
-                        {% if "FECHA" in field.label %}
+                     {% if "FECHA" in field.label %}
 
-                            {% render_field field|add_class:"form-control" size='10' type="date" data-date-format="dd-mm-yyyy" %}
-                            
+                         {% render_field field|add_class:"form-control" size='10' type="date" data-date-format="dd-mm-yyyy" %}
+                         
+                     {% else %}
+         
+                     {% if "U" in field.label %}
+                        {% render_field field value=2.0 %}
+
                         {% else %}
-            
-                        {% if "U" in field.label %}
-                           {% render_field field value=2.0 %}
+                         {% render_field field class="form-control" placeholder=field.label %}
+                         {% endif %}
 
-                           {% else %}
-                            {% render_field field class="form-control" placeholder=field.label %}
-                            {% endif %}
+                     {% endif %}
 
-                        {% endif %}
+                
 
+                     
+
+                      {% for error in field.errors %}
+                        <span class="help-block">{{ error }}</span>
+                      {% endfor %}
+                    
                    
- 
-                        
+                    
+                  {% endfor %}
 
-                         {% for error in field.errors %}
-                           <span class="help-block">{{ error }}</span>
-                         {% endfor %}
-                       
-                      
-                       
-                     {% endfor %}
+                       <!-- {{ form.as_ul }} -->
+             
+            <div class="form__button">
+	            <input type="button" value="Cancel" _="on click trigger closeModal"></input>
+                <input type="submit" value="submit"  hx-post="{% url 'create_fac' %}" hx-target="body" hx-swap="beforeend"></input>
+            </div>
 
-                          <!-- {{ form.as_ul }} -->
-
-                        <button type="submit" class="btn btn-primary">  Save</button>
-                    <a clas="btn_r" href="/"><img align="rigth" src="{% static 'img/back_arrow.ico' %}"></a>      
+                
                 </form>
-                {% endif %}
-        </ul>
-        </article>
-    
-    {% endblock %}
-    
-    <img id="img-inicio" src="{{STATIC_URL}}img/img-bg.jpg">
-    
-    </section>
-    
-    </body>
- 
+
+            </div>
+        </div>
+
+        <script src="https://unpkg.com/hyperscript.org@0.9.5"></script>
