--- a/mginvoice/static/css/style.css
+++ b/mginvoice/static/css/style.css
@@ -54,17 +54,20 @@ p.lead {
 }
 
 a {
-    color: #28c3ab;
+    color: #28c3ab; /*#28c3ab;*/
+    background-color: red
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 }
 
+
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #176e61;
+    color: #28c3ab;  /*#176e61; */
 }
+
 
 .light {
     font-weight: 400;
