--- a/mginvoice/templates/oper/create_efe.html
+++ b/mginvoice/templates/oper/create_efe.html
@@ -6,7 +6,7 @@
 
         <a href="#modal.closing"  _="on click trigger closeModal" title="Close" class="close">X</a>
 
-         <h1>Registra Depósitos</h1>
+         <h1>Registra Efectivo</h1>
     
                 <form hx-post="{{ request.path }}" class="dialog">
                        {% csrf_token %}
@@ -45,7 +45,7 @@
                 
             <div class="form__button">
 	            <input type="button" value="Cancel" _="on click trigger closeModal"></input>
-                <input type="submit" value="submit"  hx-post="{% url 'create_depo' %}" hx-target="body" hx-swap="beforeend"></input>
+                <input type="submit" value="submit"  hx-post="{% url 'list-efe' %}" hx-target="body" hx-swap="beforeend" _="on click trigger closeModal"></input>
             </div>
 
                 
