--- a/mginvoice/templates/comm/headernav.html
+++ b/mginvoice/templates/comm/headernav.html
@@ -55,6 +55,11 @@
                                             <li><a href="/list_fac_reparto">Lista De Facturas Reparto</a></li>
                                        </ol>
 
+                                       <ol class="gn-submenu">
+                                        <li><a href="/list_caja">Lista De Caja</a></li>
+                                   </ol>
+
+
                                     </li>
 
                                     <li><a href="#works" class="gn-icon gn-icon-download">Desarrollos</a></li>
